# servicemp3

./: Makefile.am  README.md  configure.ac
.github/workflows/: servicemp3.yml
m4/: ax_python_devel.m4
plugin/: Makefile.am  plugin.py
servicemp3/: Makefile.am  pythonmodule.cpp  servicemp3.cpp  servicemp3.h  servicemp3record.cpp  servicemp3record.h
